--- a/src/Presentation/SmartStore.Web/Administration/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/theme.scss
@@ -105,7 +105,9 @@ $dropdown-link-active-bg:        darken($dropdown-link-hover-bg, 5%);
 $dropdown-item-padding-y:        0.5rem;
 $dropdown-item-padding-x:        1.5rem;
 
-$alert-padding-y:             1rem;
+$alert-padding-y:       1rem;
+
+$input-group-addon-bg:  $gray-100;          
 
 
 //
