--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Decimal.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Decimal.cshtml
@@ -1,18 +1,26 @@
 @using Telerik.Web.Mvc.UI
 
 @functions{
-    private decimal? Value
-    {
-        get
-        {
-            decimal? value = null;
-            if (ViewData.Model != null)
-            {
-                value = Convert.ToDecimal(ViewData.Model, System.Globalization.CultureInfo.InvariantCulture);
-            }
-            return value;
-        }
-    }
+	private decimal? Value
+	{
+		get
+		{
+			decimal? value = null;
+			if (ViewData.Model != null)
+			{
+				value = Convert.ToDecimal(ViewData.Model, System.Globalization.CultureInfo.InvariantCulture);
+			}
+			return value;
+		}
+	}
+
+	private string Postfix
+	{
+		get
+		{
+			return ViewData["postfix"] as string;
+		}
+	}
 }
 
 
@@ -23,11 +31,19 @@
     }
 }
 
-@(Html.Telerik().NumericTextBox<decimal>()
-		.Name(ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty))
-		.EmptyMessage(T("Common.EnterValue"))
-		.Value(Value)
-		.HtmlAttributes(new { @class = additionalClass })
-		.DecimalDigits(4)   //always display 4 digits
-)
+<div class="numerictextbox-group">
+	@(Html.Telerik().NumericTextBox<decimal>()
+			.Name(ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty))
+			.EmptyMessage(T("Common.EnterValue"))
+			.Value(Value)
+			.HtmlAttributes(new { @class = additionalClass })
+			.DecimalDigits(4)   //always display 4 digits
+	)
+
+	@if (Postfix.HasValue())
+	{
+		<span class="numerictextbox-postfix">@Postfix</span>
+	}
+</div>
+
 
