--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Double.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Double.cshtml
@@ -13,6 +13,14 @@
 			return value;
 		}
 	}
+
+	private string Postfix
+	{
+		get
+		{
+			return ViewData["postfix"] as string;
+		}
+	}
 }
 
 
@@ -23,11 +31,18 @@
     }
 }
 
-@(Html.Telerik().NumericTextBox()
-		.Name(ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty))
-		.EmptyMessage(T("Common.EnterValue"))
-		.Value(Value)
-		.HtmlAttributes(new { @class = additionalClass })
-		.DecimalDigits(4)   //always display 4 digits
-)
+<div class="numerictextbox-group">
+	@(Html.Telerik().NumericTextBox<double>()
+			.Name(ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty))
+			.EmptyMessage(T("Common.EnterValue"))
+			.Value(Value)
+			.HtmlAttributes(new { @class = additionalClass })
+			.DecimalDigits(4)   //always display 4 digits
+	)
+
+	@if (Postfix.HasValue())
+	{
+		<span class="numerictextbox-postfix">@Postfix</span>
+	}
+</div>
 
