--- a/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.cshtml
@@ -241,6 +241,13 @@
 										<td class="cart-summary-value">@Model.RedeemedRewardPointsAmount</td>
 									</tr>
 								}
+                                @if (Model.OrderTotalRounding.HasValue())
+                                {
+                                    <tr class="cart-summary-totalrounding cart-summary-pos">
+                                        <td class="cart-summary-label">@T("ShoppingCart.Totals.Rounding"):</td>
+                                        <td class="cart-summary-value">@Model.OrderTotalRounding</td>
+                                    </tr>
+                                }
 								<tr class="cart-summary-total">
 									<td class="cart-summary-label">@T("Order.OrderTotal"):</td>
 									<td class="cart-summary-value">@Model.OrderTotal</td>
