Perf: Product export loaded ProductVariantAttribute collection twice (by ProductExportContext and ProductUrlHelper)

--- a/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Export/List.cshtml
@@ -213,7 +213,7 @@
 				tr.find('.btn-log').addClass('hide');
 				tr.find('.next-run-info').addClass('hide');
 				
-				$('body').animate({ scrollTop: tr.offset().top }, 'slow');
+				$('body, html').animate({ scrollTop: tr.offset().top }, 'slow');
 			},
 			onTaskCompleted: function (taskId, el) {
 				var tr = el.closest('tr'),
