--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminRoot.cshtml
@@ -68,7 +68,7 @@
 		"~/Scripts/jquery.preload.js",
 		"~/Scripts/jquery.menu-aim.js",
 		"~/Scripts/smartstore.doAjax.js",
-		"~/Scripts/smartstore.entityPicker.js",
+		"~/Scripts/smartstore.entitypicker.js",
 		"~/Scripts/jquery.addeasing.js",
 		"~/Scripts/smartstore.eventbroker.js",
 		"~/Scripts/smartstore.hacks.js",
