--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/EntityPicker.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/EntityPicker.cshtml
@@ -1,96 +1,92 @@
 ﻿@model EntityPickerModel
 @using SmartStore.Web.Models.Common;
 
-<div id="entity-picker-@(Model.Entity)-dialog" class="entity-picker modal modal-xlarge modal-flex hide fade" tabindex="-1">
-	<div class="modal-header">
-		<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
-		<h4 class="caption">&nbsp;</h4>
-	</div>
-	<div class="modal-body">
-		<form method="POST" class="modal-flex-fill-area" action="@Url.Action("EntityPicker", "Common", new { area = "" })">
-			<input type="hidden" name="Entity" value="@Model.Entity" />
-			<input type="hidden" name="HighligtSearchTerm" value="@Model.HighligtSearchTerm.ToString()" />
-			<input type="hidden" name="ReturnField" value="@Model.ReturnField" />
-			<input type="hidden" name="MaxReturnValues" value="@Model.MaxReturnValues" />
-			<input type="hidden" name="DisableIf" value="@Model.DisableIf" />
-			<input type="hidden" name="DisableIds" value="@Model.DisableIds" />
-			<input type="hidden" name="PageIndex" value="@Model.PageIndex" />
+<div id="entity-picker-@(Model.Entity)-dialog" class="modal modal-flex fade entity-picker" role="dialog" aria-hidden="true" tabindex="-1">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h3 class="modal-title">&nbsp;</h3>
+			</div>
+			<div class="modal-body">
+				<form method="POST" action="@Url.Action("EntityPicker", "Common", new { area = "" })">
+					<input type="hidden" name="Entity" value="@Model.Entity" />
+					<input type="hidden" name="HighligtSearchTerm" value="@Model.HighligtSearchTerm.ToString()" />
+					<input type="hidden" name="ReturnField" value="@Model.ReturnField" />
+					<input type="hidden" name="MaxReturnValues" value="@Model.MaxReturnValues" />
+					<input type="hidden" name="DisableIf" value="@Model.DisableIf" />
+					<input type="hidden" name="DisableIds" value="@Model.DisableIds" />
+					<input type="hidden" name="PageIndex" value="@Model.PageIndex" />
 
-			@if (Model.Entity.IsCaseInsensitiveEqual("product"))
-			{
-				@ProductSearchForm()
-			}
-			<div class="clear"></div>
-			<div class="entity-picker-list"></div>
-		</form>
-	</div>
-	<div class="modal-footer">
-		<span class="footer-note pull-left">
-			<span class="default hide">@T(Model.MaxReturnValues == 1 ? "Common.EntityPicker.SinglePickNote" : "Common.EntityPicker.MultiPickNote")</span>
-			<span class="not-selectable hide">@T("Common.NotSelectable").</span>
-		</span>
-		<button class="btn btn-primary" disabled="disabled">@T("Common.Apply")</button>
-		<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
-	</div>
-	<script type="text/javascript">
-		$(document).ready(function () {
-			$('#entity-picker-@(Model.Entity)-dialog').entityPicker('initDialog');
-		});
-	</script>
-</div>
+					@if (Model.Entity.IsCaseInsensitiveEqual("product"))
+					{
+						@ProductSearchForm()
+					}
+					<div class="entity-picker-list row px-2">
+						@* Items per AJAX *@
+					</div>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<div class="footer-note text-muted">
+					<span class="default" style="display: none">@T(Model.MaxReturnValues == 1 ? "Common.EntityPicker.SinglePickNote" : "Common.EntityPicker.MultiPickNote")</span>
+					<span class="not-selectable" style="display: none">@T("Common.NotSelectable").</span>
+				</div>
+				<div class="ml-auto">
+					<button class="btn btn-primary" disabled="disabled">@T("Common.Apply")</button>
+					<button class="btn btn-secondary" data-dismiss="modal">@T("Common.Cancel")</button>
+				</div>
 
-@helper FormButtons()
-{
-	<div class="control-group">
-		@Html.LabelFor(model => model.ProductName, new { @class = "control-label", @for = "ProductName" })
-		<div class="controls">
-			@Html.TextBoxFor(model => model.ProductName, new { @class = "entity-picker-searchterm" })
-			<button type="button" class="btn btn-warning" name="SearchEntities" data-loading-text="@(T("Common.Loading"))&hellip;">
-				<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
-			</button>
-			<button type="button" class="btn" name="FilterEntities">
-				<i class="fa fa-filter"></i>&nbsp;@T("Common.Filter")
-			</button>
+			</div>
 		</div>
 	</div>
-}
+</div>
+
+<script>
+	$(function () {
+		$('#entity-picker-@(Model.Entity)-dialog').entityPicker('initDialog');
+	});
+</script>
 
 @helper ProductSearchForm()
 {
-	<div class="form-horizontal">
-		@FormButtons()
-
-		<div class="entity-picker-filter hide">
-			<div class="control-group">
-				@Html.LabelFor(model => model.CategoryId, new { @class = "control-label", @for = "CategoryId" })
-				<div class="controls">
-					@Html.DropDownListFor(model => model.CategoryId, Model.AvailableCategories, Model.AllString, new { @class = "item" })
-				</div>
+	<div class="control-group">
+		<div class="form-inline">
+			<div class="input-group">
+				@Html.TextBoxFor(model => model.ProductName, new { @class = "form-control entity-picker-searchterm", placeholder = Html.NameFor(m => m.ProductName) })
+				<span class="input-group-btn">
+					<button type="button" class="btn btn-warning" name="SearchEntities" data-loading-text="@(T("Common.Loading"))&hellip;" title="@T("Admin.Common.Search")">
+						<i class="fa fa-search"></i>
+					</button>
+				</span>
 			</div>
+			<button type="button" class="btn btn-secondary ml-1" name="FilterEntities">
+				<i class="fa fa-filter"></i>
+			</button>
+		</div>
+	</div>
 
-			<div class="control-group">
-				@Html.LabelFor(model => model.ManufacturerId, new { @class = "control-label", @for = "ManufacturerId" })
-				<div class="controls">
-					@Html.DropDownListFor(model => model.ManufacturerId, Model.AvailableManufacturers, Model.AllString, new { @class = "item" })
-				</div>
+	<div class="entity-picker-filter form-row" style="display: none">
+		<div class="form-group col">
+			@Html.LabelFor(model => model.CategoryId, new { @class = "col-form-label text-truncate", @for = "CategoryId" })
+			@Html.DropDownListFor(model => model.CategoryId, Model.AvailableCategories, Model.AllString, new { @class = "form-control form-control-sm" })
+		</div>
+
+		<div class="form-group col">
+			@Html.LabelFor(model => model.ManufacturerId, new { @class = "col-form-label text-truncate", @for = "ManufacturerId" })
+			@Html.DropDownListFor(model => model.ManufacturerId, Model.AvailableManufacturers, Model.AllString, new { @class = "form-control form-control-sm" })
+		</div>
+
+		@if (Model.AvailableStores.Count > 1)
+		{
+			<div class="form-group col">
+				@Html.LabelFor(model => model.StoreId, new { @class = "col-form-label text-truncate", @for = "StoreId" })
+				@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores, Model.AllString, new { @class = "form-control form-control-sm" })
 			</div>
+		}
 
-			@if (Model.AvailableStores.Count > 1)
-			{
-				<div class="control-group">
-					@Html.LabelFor(model => model.StoreId, new { @class = "control-label", @for = "StoreId" })
-					<div class="controls">
-						@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores, Model.AllString, new { @class = "item" })
-					</div>
-				</div>
-			}
-
-			<div class="control-group">
-				@Html.LabelFor(model => model.ProductTypeId, new { @class = "control-label", @for = "ProductTypeId" })
-				<div class="controls">
-					@Html.DropDownListFor(model => model.ProductTypeId, Model.AvailableProductTypes, Model.AllString, new { @class = "item" })
-				</div>
-			</div>
+		<div class="form-group col">
+			@Html.LabelFor(model => model.ProductTypeId, new { @class = "col-form-label text-truncate", @for = "ProductTypeId" })
+			@Html.DropDownListFor(model => model.ProductTypeId, Model.AvailableProductTypes, Model.AllString, new { @class = "form-control form-control-sm" })
 		</div>
 	</div>
 }
