--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/EntityPickerList.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/EntityPickerList.cshtml
@@ -13,37 +13,44 @@
 }
 @foreach (var item in Model.SearchResult ?? Enumerable.Empty<EntityPickerModel.SearchResultModel>())
 {
-	<div class="item-wrap">
-        <div class="item@(item.Disable ? " disable" : "")" data-id="@item.Id" data-returnvalue="@item.ReturnValue">
-            <div class="thumb">
-                @if (item.ImageUrl.HasValue())
-                {
-                    <img src="@item.ImageUrl" alt="" />
-                }
-            </div>
-            <div class="data">
-                <div class="title" title="@item.Title">
-                    @if (item.LabelText.HasValue())
-                    {
-                        <span class="badge @item.LabelClassName">@item.LabelText</span>
-                    }
-                    <span>@HighlightSearchTermInTitle(item)</span>
-                </div>
-                <div>
-                    @if (item.Published.HasValue)
-                    {
-                        <i class="published fa @(item.Published.Value ? "fa-globe" : "fa-eye-slash") xicon-active-@item.Published.Value.ToString().ToLower()" title="@(item.Published.Value ? Model.PublishedString : Model.UnpublishedString)"></i>
-                    }
-                    <span class="summary" title="@item.SummaryTitle">@item.Summary</span>
-                </div>              
+	<div class="col-xl-3 col-lg-4 col-sm-6">
+        <div class="row flex-nowrap sm-gutters py-2 my-1 entity-picker-item@(item.Disable ? " disabled" : "")" data-id="@item.Id" data-returnvalue="@item.ReturnValue">
+			<div class="col-auto">
+				<div class="entity-picker-thumb">
+					@if (item.ImageUrl.HasValue())
+					{
+						<div class="img-center-container">
+							<img src="@item.ImageUrl" alt="" />
+						</div>
+					}
+				</div>
+			</div>
+            <div class="col text-truncate">
+				<div class="entity-picker-data text-truncate">
+					<div class="title text-truncate" title="@item.Title">
+						@if (item.LabelText.HasValue())
+						{
+							<span class="badge @item.LabelClassName">@item.LabelText</span>
+						}
+						<span>@HighlightSearchTermInTitle(item)</span>
+					</div>
+					<div class="text-truncate">
+						@if (item.Published.HasValue)
+						{
+							<i class="published fa @(item.Published.Value ? "fa-globe" : "fa-eye-slash") xicon-active-@item.Published.Value.ToString().ToLower()" title="@(item.Published.Value ? Model.PublishedString : Model.UnpublishedString)"></i>
+						}
+						<span class="summary" title="@item.SummaryTitle">@item.Summary</span>
+					</div>
+					
+				</div>             
             </div>
         </div>
     </div>
 }
-<div class="list-footer">
+<div class="col-12 py-2 text-center entity-picker-list-footer">
 	@if (Model.SearchResult == null || Model.SearchResult.Count == 0)
 	{
-		@T("Common.EntityPicker.NoMoreItemsFound")
+		<span class="text-muted">@T("Common.EntityPicker.NoMoreItemsFound")</span>
 	}
 	else if (Model.SearchResult.Count == Model.PageSize)
 	{
@@ -51,6 +58,6 @@
 	}
 	else if (Model.PageIndex > 0)
 	{
-		@T("Common.EntityPicker.NoMoreItemsFound")
+		<span class="text-muted">@T("Common.EntityPicker.NoMoreItemsFound")</span>
 	}
 </div>
