--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/EntityPicker.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/EntityPicker.cshtml
@@ -1,14 +1,19 @@
 ﻿@model EntityPickerModel
+
 @using SmartStore.Web.Models.Common;
+
+@{ 
+	var isProductPicker = Model.Entity.IsCaseInsensitiveEqual("product");
+}
 
 <div id="entity-picker-@(Model.Entity)-dialog" class="modal modal-flex fade entity-picker" role="dialog" aria-hidden="true" tabindex="-1">
 	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
+		<form class="modal-content" method="POST" action="@Url.Action("EntityPicker", "Common", new { area = "" })">
+			<div class="modal-header flex-wrap">
 				<h3 class="modal-title">&nbsp;</h3>
-			</div>
-			<div class="modal-body">
-				<form method="POST" action="@Url.Action("EntityPicker", "Common", new { area = "" })">
+
+				@if (isProductPicker)
+				{
 					<input type="hidden" name="Entity" value="@Model.Entity" />
 					<input type="hidden" name="HighligtSearchTerm" value="@Model.HighligtSearchTerm.ToString()" />
 					<input type="hidden" name="ReturnField" value="@Model.ReturnField" />
@@ -17,14 +22,13 @@
 					<input type="hidden" name="DisableIds" value="@Model.DisableIds" />
 					<input type="hidden" name="PageIndex" value="@Model.PageIndex" />
 
-					@if (Model.Entity.IsCaseInsensitiveEqual("product"))
-					{
-						@ProductSearchForm()
-					}
-					<div class="entity-picker-list row px-2">
-						@* Items per AJAX *@
-					</div>
-				</form>
+					@ProductSearchForm()
+				}
+			</div>
+			<div class="modal-body">
+				<div class="entity-picker-list row px-2">
+					@* Items per AJAX *@
+				</div>
 			</div>
 			<div class="modal-footer">
 				<div class="footer-note text-muted">
@@ -32,12 +36,12 @@
 					<span class="not-selectable" style="display: none">@T("Common.NotSelectable").</span>
 				</div>
 				<div class="ml-auto">
-					<button class="btn btn-primary" disabled="disabled">@T("Common.Apply")</button>
-					<button class="btn btn-secondary" data-dismiss="modal">@T("Common.Cancel")</button>
+					<button type="button" class="btn btn-light btn-flat" data-dismiss="modal">@T("Common.Cancel")</button>
+					<button type="button" class="btn btn-primary" disabled="disabled">@T("Common.Apply")</button>
 				</div>
 
 			</div>
-		</div>
+		</form>
 	</div>
 </div>
 
@@ -49,7 +53,7 @@
 
 @helper ProductSearchForm()
 {
-	<div class="control-group">
+	<div class="control-group mr-2">
 		<div class="form-inline">
 			<div class="input-group">
 				@Html.TextBoxFor(model => model.ProductName, new { @class = "form-control entity-picker-searchterm", placeholder = Html.NameFor(m => m.ProductName) })
@@ -59,32 +63,32 @@
 					</button>
 				</span>
 			</div>
-			<button type="button" class="btn btn-secondary ml-1" name="FilterEntities">
+			<button type="button" class="btn btn-secondary ml-2" name="FilterEntities" data-toggle="button">
 				<i class="fa fa-filter"></i>
 			</button>
 		</div>
 	</div>
 
-	<div class="entity-picker-filter form-row" style="display: none">
-		<div class="form-group col">
+	<div class="entity-picker-filter form-row xs-gutters w-100 pt-2" style="display: none">
+		<div class="form-group col mb-0">
 			@Html.LabelFor(model => model.CategoryId, new { @class = "col-form-label text-truncate", @for = "CategoryId" })
 			@Html.DropDownListFor(model => model.CategoryId, Model.AvailableCategories, Model.AllString, new { @class = "form-control form-control-sm" })
 		</div>
 
-		<div class="form-group col">
+		<div class="form-group col mb-0">
 			@Html.LabelFor(model => model.ManufacturerId, new { @class = "col-form-label text-truncate", @for = "ManufacturerId" })
 			@Html.DropDownListFor(model => model.ManufacturerId, Model.AvailableManufacturers, Model.AllString, new { @class = "form-control form-control-sm" })
 		</div>
 
 		@if (Model.AvailableStores.Count > 1)
 		{
-			<div class="form-group col">
+			<div class="form-group col mb-0">
 				@Html.LabelFor(model => model.StoreId, new { @class = "col-form-label text-truncate", @for = "StoreId" })
 				@Html.DropDownListFor(model => model.StoreId, Model.AvailableStores, Model.AllString, new { @class = "form-control form-control-sm" })
 			</div>
 		}
 
-		<div class="form-group col">
+		<div class="form-group col mb-0">
 			@Html.LabelFor(model => model.ProductTypeId, new { @class = "col-form-label text-truncate", @for = "ProductTypeId" })
 			@Html.DropDownListFor(model => model.ProductTypeId, Model.AvailableProductTypes, Model.AllString, new { @class = "form-control form-control-sm" })
 		</div>
