Minor optimizations for mobile footer display

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_footer.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_footer.scss
@@ -78,6 +78,10 @@
         border-top-color: lighten($footer-bg, 10%);
         border-bottom-color: lighten($footer-bg, 10%);
     }
+
+    .footer-main .footer-title {
+        margin-bottom: 0;
+    }
 }
 
 .footer-light {
