--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/Footer.cshtml
@@ -89,7 +89,10 @@
 
 			<div class="col-md-3">
 				<nav class="footer-links nav-collapsible">
-					<h4 class="footer-title nav-toggler collapsed" data-toggle="collapse" data-target="#footer-service" aria-controls="footer-service" aria-expanded="false">@T("Footer.Service")</h4>
+					<h4 class="footer-title nav-toggler collapsed" data-toggle="collapse" data-target="#footer-service" aria-controls="footer-service" aria-expanded="false">
+                        <span class="d-none d-md-block">@T("Footer.Service")</span>
+                        <span class="d-md-none">@T("Footer.Service.Mobile")</span>
+                    </h4>
 					<div class="collapse nav-collapse" id="footer-service">
 						<ul class="list-unstyled">
 
@@ -125,7 +128,10 @@
 
 			<div class="col-md-3">
 				<nav class="footer-links company nav-collapsible">
-					<h4 class="footer-title nav-toggler collapsed" data-toggle="collapse" data-target="#footer-company" aria-controls="footer-company" aria-expanded="false">@T("Footer.Company")</h4>
+					<h4 class="footer-title nav-toggler collapsed" data-toggle="collapse" data-target="#footer-company" aria-controls="footer-company" aria-expanded="false">
+                        <span class="d-none d-md-block">@T("Footer.Company")</span>
+                        <span class="d-md-none">@T("Footer.Company.Mobile")</span>
+                    </h4>
 					<div class="collapse nav-collapse" id="footer-company">
 						<ul class="list-unstyled">
 
