--- a/src/Plugins/SmartStore.DiscountRules/Views/DiscountRules/HasAllProducts.cshtml
+++ b/src/Plugins/SmartStore.DiscountRules/Views/DiscountRules/HasAllProducts.cshtml
@@ -38,7 +38,7 @@
 		// add required products
 		$(document).on('click', '#SearchRequiredProductsButton', function () {
 			$('#@(Html.FieldIdFor(x => x.Products))').entityPicker('loadDialog', {
-				url: '@Url.Action("EntityPicker", "Common", new { area = "" })',
+				url: '@Url.Action("Picker", "Entity", new { area = "" })',
 				caption: '@T("Plugins.DiscountRules.HasAllProducts.Fields.Products")',
 				returnValueDelimiter: ',',
 				onLoadDialogBefore: function () {
